--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "~1.0.0",
     "mongoose": "~4.0.3",
     "morgan": "~1.0.0",
+    "nodemailer": "^1.4.0",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
     "serve-favicon": "~2.0.1"
